--- a/app.yaml
+++ b/app.yaml
@@ -30,3 +30,23 @@ spec:
     targetPort: 80
   selector:
     app: playground-app
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: playground-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+    - http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: playground-app
+            port:
+              number: 80
